New RecyclerView with error, loading, refresh implemented

--- a/app/src/main/res/layout/fragment_member_list.xml
+++ b/app/src/main/res/layout/fragment_member_list.xml
@@ -6,20 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".fragment.MemberListFragment">
 
-    <com.google.android.material.progressindicator.CircularProgressIndicator
-        android:id="@+id/loadingIndicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminate="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvMembersList"
+    <hu.bme.aut.android.sharedshoppinglist.util.LCEERecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_member" />
+        app:refreshable="false" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
