Export fragment implemented

--- a/app/src/main/res/layout/fragment_member_list.xml
+++ b/app/src/main/res/layout/fragment_member_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.MemberListFragment">
+    tools:context=".fragment.MemberFragment">
 
     <hu.bme.aut.android.sharedshoppinglist.util.LCEERecyclerView
         android:id="@+id/recyclerView"
