All 3 api implemented with service. Autofill added. Product List fragment implemented. Singleton pattern implemented.

--- a/app/src/main/res/layout/dialog_buy_product.xml
+++ b/app/src/main/res/layout/dialog_buy_product.xml
@@ -5,20 +5,21 @@
     android:layout_height="wrap_content">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/etJoinCode"
+        android:id="@+id/etProductPrice"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/join_code_edit_text"
+        android:hint="@string/product_price"
         android:padding="@dimen/padding_around_blocks"
         app:errorEnabled="true"
         app:helperText="@string/helper_text_required"
-        app:helperTextEnabled="true">
+        app:helperTextEnabled="true"
+        app:prefixText="@string/dollar_sign">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textFilter" />
+            android:inputType="numberDecimal" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
