--- a/app/src/main/res/layout/item_shopping_list.xml
+++ b/app/src/main/res/layout/item_shopping_list.xml
@@ -78,7 +78,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
-                    android:text="@string/last_edited"
+                    android:text="@string/last_item_added"
                     android:textAppearance="?attr/textAppearanceBody1"
                     android:textColor="?android:attr/textColorSecondary" />
 
