--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="button_horizontal_margin">10dp</dimen>
     <dimen name="list_item_margin">8dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="tv_bottom_padding">16dp</dimen>
 </resources>
