--- a/app/src/main/res/layout/dialog_new_product.xml
+++ b/app/src/main/res/layout/dialog_new_product.xml
@@ -45,6 +45,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:digits=".,0123456789"
             android:inputType="numberDecimal" />
 
     </com.google.android.material.textfield.TextInputLayout>
